# test

./: .gitignore  Dockerfile  Procfile  README.md  railway.json
_workspace/: feedback_2026-05-14_pr1_delivery.md  feedback_2026-05-14_pr2_delivery.md  manual_test_scenario_construction.md  manual_test_scenario_heavy_industry.md  manual_test_scenario_manufacturing.md  manual_test_scenario_semiconductor.md  user_manual.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/data/: glossary_by_domain.json  thresholds.json
backend/data/checklist_catalog/: construction.json  heavy_industry.json  manufacturing.json  semiconductor.json
backend/src/: llm.py  main.py  prompt.py  tenant.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts
frontend/public/fonts/: README.txt
frontend/src/: App.css  App.tsx  Router.tsx  index.css
frontend/src/components/: AttachmentPreview.tsx  AttendeeForm.tsx  AttendeeList.tsx  CTAButton.tsx  CameraCapture.tsx  CameraConsentModal.tsx  HazardOverlay.tsx  HazardRecommendCard.tsx  HazardResultCard.tsx  Icon.tsx  PrepareContextForm.tsx  PwcMark.tsx  ReportPreview.tsx  RuleLine.tsx  SignaturePad.tsx  SuggestedQuestionChips.tsx  SummaryRow.tsx  TopBar.tsx  WorkTypeCatalog.tsx
frontend/src/hooks/: useSession.ts
frontend/src/screens/: FinishScreen.tsx  HistoryScreen.tsx  HomeScreen.tsx  PrepareScreen.tsx  SettingsScreen.tsx  TBMScreen.tsx
frontend/src/services/: aiSettings.ts  attachmentStore.ts  db.ts  (+18 more)
scripts/: sync-catalog.mjs  verify-catalog-hash.mjs
(+54 files in other folders)
