[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.13",
    "ipdb>=0.13.13",
    "aiofiles>=23.2.1",
    "httpx>=0.27.0",
    "uvicorn>=0.34.3",
    "dotenv>=0.9.9",
    "python-multipart>=0.0.20",
    "loguru>=0.7.3",
]
